// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > Input alignVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        左对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        居中
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--center t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        右对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input bannerVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--border input-demo"
  data-v-6c136f2f=""
>
  <div
    class="t-input__wrap--prefix"
  >
    <!---->
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        name=""
        placeholder="请输入文字"
        spellcheck="false"
        style="--td-input-cursor-color: #0052d9;"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input > Input baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字(选填)"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input borderedVue demo works fine 1`] = `
<div
  class="input-demo"
  data-v-f23aff25=""
>
  <div
    class="input-demo__summary"
    data-v-f23aff25=""
  >
    标签文字
  </div>
  <div
    class="t-input t-input--layout-horizontal custom-input"
    data-v-f23aff25=""
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-error-circle-filled"
            data-v-f23aff25=""
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input > Input customVue demo works fine 1`] = `
<div
  class="input-demo"
  data-v-c3916633=""
>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
    data-v-c3916633=""
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input > Input labelVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--border"
>
  <div
    class="t-input__wrap--prefix"
  >
    <!---->
    <div
      class="t-input__label"
    >
      标签超长时最多十个字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        name=""
        placeholder="请输入文字"
        spellcheck="false"
        style="--td-input-cursor-color: #0052d9;"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input > Input layoutVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-vertical t-input--border"
>
  <div
    class="t-input__wrap--prefix"
  >
    <!---->
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        name=""
        placeholder="请输入文字"
        spellcheck="false"
        style="--td-input-cursor-color: #0052d9;"
        type="text"
      />
      <!---->
      <!---->
      <div
        class="t-input__wrap--suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
            fill="currentColor"
          />
        </svg>
        
      </div>
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input > Input maxLengthVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符，汉字算两个
      </div>
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Input 输入框
  </h1>
  <p
    class="summary"
  >
    用于单行文本信息输入。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字(选填)"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带字数限制输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符，汉字算两个
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带操作输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-info-circle-filled"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入手机号码"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="tel"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
             操作按钮 
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-user-avatar"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="user-avatar"
                >
                  <path
                    d="M3 3L21 3L21 21L3 21L3 3Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <g
                    id="fill2"
                  >
                    <path
                      d="M15.5 9.5C15.5 11.433 13.933 13 12 13C10.067 13 8.5 11.433 8.5 9.5C8.5 7.567 10.067 6 12 6C13.933 6 15.5 7.567 15.5 9.5Z"
                      fill="transparent"
                    />
                    <path
                      d="M5.5 20C5.5 17.7909 7.29086 16 9.5 16H14.5C16.7091 16 18.5 17.7909 18.5 20V21H5.5V20Z"
                      fill="transparent"
                    />
                  </g>
                  <g
                    id="stroke2"
                  >
                    <path
                      d="M15.5 9.5C15.5 11.433 13.933 13 12 13C10.067 13 8.5 11.433 8.5 9.5C8.5 7.567 10.067 6 12 6C13.933 6 15.5 7.567 15.5 9.5Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                    <path
                      d="M5.5 20C5.5 17.7909 7.29086 16 9.5 16H14.5C16.7091 16 18.5 17.7909 18.5 20V21H5.5V20Z"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                  <path
                    d="M3 3L21 3L21 21L3 21L3 3Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="app"
              >
                <g
                  id="fill1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    fill="transparent"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    fill="transparent"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    fill="transparent"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  fill="transparent"
                  id="fill2"
                />
                <g
                  id="stroke1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="app"
              >
                <g
                  id="fill1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    fill="transparent"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    fill="transparent"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    fill="transparent"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  fill="transparent"
                  id="fill2"
                />
                <g
                  id="stroke1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        特定类型输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            输入密码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="password"
            />
            <!---->
            <!---->
            <div
              class="t-input__wrap--suffix-icon"
            >
              <svg
                class="t-icon t-icon-browse-off"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="browse-off"
                >
                  <path
                    d="M13.1758 8.17578C14.4396 8.56376 15.4368 9.56096 15.8247 10.8247M21.2858 15.2856C22.0085 14.2983 22.5776 13.1913 22.9578 12C21.4771 7.36017 17.131 4 12.0001 4C11.3698 4 10.7513 4.05072 10.1484 4.1483M5.80747 5.80786C3.57225 7.23888 1.86478 9.42193 1.04199 12.0001C2.52275 16.6399 6.86881 20.0001 11.9997 20.0001C14.2796 20.0001 16.4045 19.3367 18.1919 18.1923L5.80747 5.80786ZM8 12.0003C8 10.8957 8.44771 9.89573 9.17157 9.17188L14.8284 14.8287C14.1046 15.5526 13.1046 16.0003 12 16.0003C9.79086 16.0003 8 14.2094 8 12.0003Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M20.9996 21L3 3"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            验证码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="输入验证码"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                class="suffix"
              >
                <div
                  class="suffix--line"
                />
                <div
                  aria-label="验证码"
                  aria-role="img"
                  class="t-image t-image--square image"
                  mode="heightFix"
                >
                  <div
                    class="t-image__mask"
                  >
                    <div
                      class="t-loading"
                      style="font-size: 20px;"
                    >
                      <div
                        class="t-loading__dots"
                        style="animation-duration: 800ms; width: 20px; height: 20px;"
                      >
                        
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0s;"
                        />
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                        />
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                        />
                        
                      </div>
                      <!---->
                      <!---->
                    </div>
                  </div>
                  <picture>
                    <!---->
                    <img
                      alt=""
                      class="t-image__img"
                      src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
                      style="object-fit: fill; object-position: center;"
                    />
                  </picture>
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            手机号
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="输入手机号码"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                class="suffix"
              >
                <div
                  class="suffix--line"
                />
                <div
                  aria-role="button"
                  class="verify"
                >
                  发送验证码
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            价格
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              name=""
              placeholder="0.00"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="number"
            />
            <!---->
            <div
              class="t-input__wrap--suffix"
            >
              元
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            数量
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              name=""
              placeholder="填写个数"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="number"
            />
            <!---->
            <div
              class="t-input__wrap--suffix"
            >
              个
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        输入框状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--error"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--error"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            辅助说明
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            不可编辑
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default t-input__control--disabled"
              disabled=""
              name=""
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        信息超长状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签超长时最多十个字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        内容位置
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            左对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            居中
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--center t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            右对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        竖排样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-vertical t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        非通栏样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--border input-demo"
        data-v-6c136f2f=""
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        标签外置样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="input-demo"
        data-v-f23aff25=""
      >
        <div
          class="input-demo__summary"
          data-v-f23aff25=""
        >
          标签文字
        </div>
        <div
          class="t-input t-input--layout-horizontal custom-input"
          data-v-f23aff25=""
        >
          <div
            class="t-input__wrap--prefix"
          >
            <!---->
            <div
              class="t-input__label"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                name=""
                placeholder="请输入文字"
                spellcheck="false"
                style="--td-input-cursor-color: #0052d9;"
                type="text"
              />
              <!---->
              <!---->
              <div
                class="t-input__wrap--suffix-icon"
              >
                
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  data-v-f23aff25=""
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
                    fill="currentColor"
                  />
                </svg>
                
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义样式输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="input-demo"
        data-v-c3916633=""
      >
        <div
          class="t-input t-input--layout-horizontal t-input--border"
          data-v-c3916633=""
        >
          <div
            class="t-input__wrap--prefix"
          >
            <!---->
            <div
              class="t-input__label"
            >
              标签文字
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                name=""
                placeholder="请输入文字"
                spellcheck="false"
                style="--td-input-cursor-color: #0052d9;"
                type="text"
              />
              <!---->
              <!---->
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Input > Input prefixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="app"
          >
            <g
              id="fill1"
            >
              <path
                d="M3 3H10V10H3V3Z"
                fill="transparent"
              />
              <path
                d="M14 14H21V21H14V14Z"
                fill="transparent"
              />
              <path
                d="M3 14H10V21H3V14Z"
                fill="transparent"
              />
            </g>
            <path
              d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
              fill="transparent"
              id="fill2"
            />
            <g
              id="stroke1"
            >
              <path
                d="M3 3H10V10H3V3Z"
                stroke="currentColor"
                stroke-width="2"
              />
              <path
                d="M14 14H21V21H14V14Z"
                stroke="currentColor"
                stroke-width="2"
              />
              <path
                d="M3 14H10V21H3V14Z"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
            <path
              d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
              id="stroke2"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="app"
          >
            <g
              id="fill1"
            >
              <path
                d="M3 3H10V10H3V3Z"
                fill="transparent"
              />
              <path
                d="M14 14H21V21H14V14Z"
                fill="transparent"
              />
              <path
                d="M3 14H10V21H3V14Z"
                fill="transparent"
              />
            </g>
            <path
              d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
              fill="transparent"
              id="fill2"
            />
            <g
              id="stroke1"
            >
              <path
                d="M3 3H10V10H3V3Z"
                stroke="currentColor"
                stroke-width="2"
              />
              <path
                d="M14 14H21V21H14V14Z"
                stroke="currentColor"
                stroke-width="2"
              />
              <path
                d="M3 14H10V21H3V14Z"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
            <path
              d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
              id="stroke2"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input specialVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        输入密码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="password"
        />
        <!---->
        <!---->
        <div
          class="t-input__wrap--suffix-icon"
        >
          <svg
            class="t-icon t-icon-browse-off"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="browse-off"
            >
              <path
                d="M13.1758 8.17578C14.4396 8.56376 15.4368 9.56096 15.8247 10.8247M21.2858 15.2856C22.0085 14.2983 22.5776 13.1913 22.9578 12C21.4771 7.36017 17.131 4 12.0001 4C11.3698 4 10.7513 4.05072 10.1484 4.1483M5.80747 5.80786C3.57225 7.23888 1.86478 9.42193 1.04199 12.0001C2.52275 16.6399 6.86881 20.0001 11.9997 20.0001C14.2796 20.0001 16.4045 19.3367 18.1919 18.1923L5.80747 5.80786ZM8 12.0003C8 10.8957 8.44771 9.89573 9.17157 9.17188L14.8284 14.8287C14.1046 15.5526 13.1046 16.0003 12 16.0003C9.79086 16.0003 8 14.2094 8 12.0003Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M20.9996 21L3 3"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        验证码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="输入验证码"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            class="suffix"
          >
            <div
              class="suffix--line"
            />
            <div
              aria-label="验证码"
              aria-role="img"
              class="t-image t-image--square image"
              mode="heightFix"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        手机号
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="输入手机号码"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            class="suffix"
          >
            <div
              class="suffix--line"
            />
            <div
              aria-role="button"
              class="verify"
            >
              发送验证码
            </div>
          </div>
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        价格
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          name=""
          placeholder="0.00"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="number"
        />
        <!---->
        <div
          class="t-input__wrap--suffix"
        >
          元
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        数量
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          name=""
          placeholder="填写个数"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="number"
        />
        <!---->
        <div
          class="t-input__wrap--suffix"
        >
          个
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--error"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--error"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        辅助说明
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        不可编辑
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default t-input__control--disabled"
          disabled=""
          name=""
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input suffixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入手机号码"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="tel"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
    <button
      aria-disabled="false"
      class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
         操作按钮 
        
      </span>
      <!---->
    </button>
    
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-user-avatar"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="user-avatar"
            >
              <path
                d="M3 3L21 3L21 21L3 21L3 3Z"
                fill="transparent"
                id="fill1"
              />
              <g
                id="fill2"
              >
                <path
                  d="M15.5 9.5C15.5 11.433 13.933 13 12 13C10.067 13 8.5 11.433 8.5 9.5C8.5 7.567 10.067 6 12 6C13.933 6 15.5 7.567 15.5 9.5Z"
                  fill="transparent"
                />
                <path
                  d="M5.5 20C5.5 17.7909 7.29086 16 9.5 16H14.5C16.7091 16 18.5 17.7909 18.5 20V21H5.5V20Z"
                  fill="transparent"
                />
              </g>
              <g
                id="stroke2"
              >
                <path
                  d="M15.5 9.5C15.5 11.433 13.933 13 12 13C10.067 13 8.5 11.433 8.5 9.5C8.5 7.567 10.067 6 12 6C13.933 6 15.5 7.567 15.5 9.5Z"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M5.5 20C5.5 17.7909 7.29086 16 9.5 16H14.5C16.7091 16 18.5 17.7909 18.5 20V21H5.5V20Z"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
              <path
                d="M3 3L21 3L21 21L3 21L3 3Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;
